// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CModalHeader customize 1`] = `
<div>
  <div
    class="modal-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalHeader component 1`] = `
<div>
  <div
    class="modal-header"
  >
    Test
  </div>
</div>
`;
